mdapioutput/objects/PromoCalendarHeader__mdt.object
<CustomObject>
    <fields>
        <fullName>DefaultView__c</fullName>
        <label>Default View</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                    <default>true</default>
                    <label>Month</label>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DisplayObjectName__c</fullName>
        <label>Display Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayObjectRecordType__c</fullName>
        <label>Display Object Record Type API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Promo Calendar Header</label>
    <pluralLabel>Promo Calendar Headers</pluralLabel>
</CustomObject>